# AIRo2-Assignment-2

./: README.md  VisitSolver.cpp  build_all.sh  build_visits_only.sh  call.sh
popf-tif/modules/eo/src/: CMakeLists.txt  DynamicSolver.cpp  DynamicSolver.h  EasySolver.cpp  EasySolver.h  ExternalSolver.cpp  ExternalSolver.h  buildInstruction.txt
popf-tif/modules/hbw/src/: CMakeLists.txt  HBWSolver.cpp  HBWSolver.h  buildInstructions.txt  main.cpp
popf-tif/modules/hbw/src/.kdev4/: _custom.kdev4  hbw.kdev4
popf-tif/modules/hbw/src/cmake/: FindArmadillo.cmake
popf-tif/modules/sat/src/: CMakeLists.txt  ExternalSolver.cpp  SaTSolver.cpp  SaTSolver.h  buildInstruction.txt  main.cpp
popf-tif/modules/sat/src/TestCases/: example.txt
popf-tif/planner/src/: CMakeLists.txt  build-instructions.txt
popf-tif/planner/src/VALfiles/: CMakeLists.txt  Validator.cpp  instantiation.cpp  instantiation.h
popf-tif/planner/src/VALfiles/testing/: CMakeLists.txt  checkplanstepsexist
popf-tif/planner/src/VALfiles/testing/airport20/: CMakeLists.txt  airport-domain.pddl  airport-plan  airport-problem.pddl
popf-tif/planner/src/VALfiles/testing/cafe-1/: CMakeLists.txt  cafe-domain.pddl  cafe-hypo-domain.pddl  cafe-plan  cafe-problem.pddl
popf-tif/planner/src/VALfiles/testing/landing/: CMakeLists.txt  domain.pddl  pfile01.pddl
popf-tif/planner/src/VALfiles/testing/logisticsinst/: CMakeLists.txt  domain.pddl  problem.pddl  soln
popf-tif/planner/src/VALfiles/testing/pat/: CMakeLists.txt  domain.pddl  insttest.cpp  problem.pddl
popf-tif/planner/src/VALfiles/testing/pipes-strips-1/: CMakeLists.txt  pipesworld-notankage_nontemporal-strips-plan  pipesworld-tankage_nontemporal-strips-plan
popf-tif/planner/src/VALfiles/testing/satellite-til-1/: CMakeLists.txt
popf-tif/planner/src/VALfiles/testing/spanner/: CMakeLists.txt  spanner-domain.pddl  spanner-plan-01  spanner-problem-01.pddl
popf-tif/planner/src/VALfiles/testing/storage1/: CMakeLists.txt  domain.pddl  pfile01.pddl  soln
popf-tif/planner/src/VALfiles/testing/storage3/: CMakeLists.txt
popf-tif/planner/src/VALfiles/testing/tpp1/: CMakeLists.txt
popf-tif/planner/src/popf/: CMakeLists.txt  Color.cpp  Color.h  DotSearchSpace.cpp  DotSearchSpace.h  ExternalSolver.cpp  ExternalSolver.h  FFEvent.cpp  FFEvent.h  FFSolver.cpp  FFSolver.h  LookAhead.cpp  LookAhead.h  ModifiedSearch.cpp  ModifiedSearch.h  RPGBuilder.cpp  RPGBuilder.h  RPGBuilderAnalysis.cpp  RPGBuilderEvaluation.cpp  RPGBuilderNumerics.cpp  StochasticDurations.cpp  StochasticDurations.h  TimewindowsChecker.cpp  TimewindowsChecker.h  build-instructions.txt  colintotalordertransformer.cpp  colintotalordertransformer.h  colours.h  compressionsafescheduler.cpp  compressionsafescheduler.h  cplex.supp  globals.cpp  globals.h  lpscheduler.cpp  lpscheduler.h  minimalstate.cpp  minimalstate.h  numericanalysis.cpp  numericanalysis.h  partialordertransformer.cpp  (+19 more)
popf-tif/planner/src/popf/cmake/modules/: FindConcert.cmake  FindCplex.cmake
popf-tif/planner/src/popf/testcases/: CMakeLists.txt  maketestsforcurrentdirectory  popf2readplanthenvalidate  popf2thenvalidate
popf-tif/planner/src/popf/testcases/AshutoshVerma/: CMakeLists.txt  t3-domain.pddl  t3-problem.pddl  t3-solution
popf-tif/planner/src/popf/testcases/LPBFTests/: CMakeLists.txt  airport-temporal-domain.pddl  maketestconfig  rovers-time-domain.pddl
popf-tif/planner/src/popf/testcases/TILTests/: CMakeLists.txt  TIL-fluent-invariant-domain.pddl  TIL-fluent-invariant-problem.pddl  TIL-numeric-and-propositional-goal-persistence-domain.pddl  TIL-numeric-and-propositional-goal-persistence-problem.pddl  TIL-numeric-goal-persistence-domain.pddl  TIL-numeric-goal-persistence-problem.pddl  TIL-propositional-goal-persistence-domain.pddl  TIL-propositional-goal-persistence-problem.pddl  satellite-complex-plan  satellite-domain.pddl  satellite-plan  satellite-problem.pddl  simple-TIL-fluent-domain.pddl  simple-TIL-fluent-problem.pddl
popf-tif/planner/src/popf/testcases/coordination/: CMakeLists.txt  driverlogshift-domain.pddl  driverlogshift-plan-02  driverlogshift-problem-01.pddl  driverlogshift-problem-02.pddl  driverlogshift-problem-03.pddl  driverlogshift-problem-04.pddl  driverlogshift-problem-05.pddl  driverlogshift-problem-06.pddl  driverlogshift-problem-07.pddl  driverlogshift-problem-08.pddl  driverlogshift-problem-09.pddl
popf-tif/planner/src/popf/testcases/ctseffects/: 01-oilrefinery-domain.pddl  01-oilrefinery-problem.pddl  02-oilrefinery-domain.pddl  02-oilrefinery-problem.pddl  02-oilrefinery-sequence  03-oilrefinery-domain.pddl  03-oilrefinery-problem.pddl  CMakeLists.txt  auv-domain.pddl  auv-plan  auv-problem.pddl  generator-domain.pddl  generator-fill-domain.pddl  generator-fill-plan  generator-fill-problem.pddl  generator-plan  generator-problem.pddl  satellite-cts-domain-07.pddl  satellite-cts-plan-01  satellite-cts-problem-01.pddl  satellite-cts-problem-07.pddl  transformer-domain.pddl  transformer-problem-01.pddl
popf-tif/planner/src/popf/testcases/lpsameasstp/: CMakeLists.txt  matchlift-domain.pddl  matchlift-problem-02.pddl
popf-tif/planner/src/popf/testcases/nonumbers/: CMakeLists.txt  satellite-cts-domain.pddl  satellite-cts-plan-01  settlers-di-domain.pddl
popf-tif/planner/src/popf/testcases/pfile1tests/: CMakeLists.txt  airport-temporal-strips_temporal-domain.pddl  airport-temporal_timewindows-strips_temporal_timedliterals-domain.pddl  depots-simpletime-domain.pddl  depots-time-domain.pddl  pipesworld-tankage_nontemporal-strips-plan  psr-small-strips-solution  satellite-time_timewindows-strips_temporal_timedliterals-domain.pddl  tpp-metric-plan  umts-flaw_temporal-strips_fluents_temporal-plan  umts-temporal-strips_fluents_temporal-domain.pddl  umts-temporal-strips_fluents_temporal-plan
popf-tif/planner/src/popf/testcases/posthoctests/: CMakeLists.txt  airport-03-domain.pddl  airport-03-problem.pddl  airport-05-domain.pddl  airport-05-problem.pddl  landing-domain.pddl  (+17 more)
visits/visits_module/src/: CMakeLists.txt  ExternalSolver.h  VisitSolver.cpp  VisitSolver.h  buildInstruction.txt  main.cpp
(+1733 files in other folders)
